--- a/login/pubspec.yaml
+++ b/login/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   http: ^0.14.0
   cupertino_icons: ^1.0.8
+  jwt_decoder: ^2.0.1
 
 dependency_overrides:
   http: any
